docs/document/versioned_docs/version-1.1.1/components/mobile/mobile-dropdown.md
---
id: mobile-dropdown
title: MobileDropdown
sidebar_label: MobileDropdown
original_id: mobile-dropdown
---

## Overview

The MobileDropdown component allows the user to select one out of several options.

import { MobileDropdownComponent } from "@site/static/js/samples/mobile/dropdown.js"

<MobileDropdownComponent />

---

## Specification

### Property

Here is a list of properties that can be used for modifying the component:

| Name   | Type | Default | Description | Remark |
| :--- | :--- | :--- | :--- | :--- |
| className | string | ""  | Component class name | |
| error | string | ""  | Text to be displayed in error | Error will not be displayed if unspecified or left empty |
| id | string | ""  | Component id name | |
| label | string | ""  | Label for the component | Label will not be displayed if unspecified or left empty |
| value | string | ""  | Selected value | No option will be selected if the value is unspecified |
| disabled | boolean | false | Enable/Disable the component from selecting | |
| requiredIcon | boolean | false | Show/Hide the required icon | |
| visible | boolean | true | Show/Hide the component | |
| items | Array<Item\> | []  | List of options to display | Will result an error if the value of items is not an array |
| Item.label | string | null | Text for each option | If `Item.label` is unspecified, the value of Item.value is displayed on the UI |
| Item.value | string | null | Value of each option | Will result an error if there is duplicated value in Item.value |

### Event

Here is a list of events that can be specified:

| Name | Type | Description | Remark |
| :--- | :--- | :--- | :--- |
| change | function | Event handler when the value has been changed | It will pass the event object as the argument<br/><br/>You can receive the following values in event.detail<br/>event.detail.oldValue : Value before the change<br/>event.detail.value : Value after the change |

### Constructor

MobileDropdown(options)<br/>
Here is a list of available constructors:

#### Parameter

| Name | Type | Default | Description | Remark |
| :--- | :--- | :--- | :--- | :--- |
| options | object | {} | Object that includes component properties |  |

---

## Sample Code

Here is a sample code when all parameters are specified:

```javascript
const space = kintone.mobile.app.record.getSpaceElement('space');
const mobileDropdown = new Kuc.MobileDropdown({
  label: 'Fruit',
  requiredIcon: true,
  items: [
    {
      label: 'orange',
      value: 'Orange'
    },
    {
      label: 'apple',
      value: 'Apple'
    }
  ],
  value: 'Orange',
  error: 'Error occurred!',
  className: 'options-class',
  id: 'options-id',
  visible: true,
  disabled: false
});
space.appendChild(mobileDropdown);

mobileDropdown.addEventListener('change', event => {
  console.log(event);
});
```
